<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/framelayout"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_option_to_see_the_color_palatte"
            android:textColor="@color/colorWhite"
            android:textSize="21dp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_centerHorizontal="true"
            android:nextFocusForward="@+id/btnPhoto"/>

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:text="@string/take_photo"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            android:onClick="selectImage"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvDetail"
            android:nextFocusForward="@+id/btnGallery"/>

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:text="@string/choose_from_library"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            android:layout_below="@+id/btnPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>
    </RelativeLayout>

</RelativeLayout>
