<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/rlWallpaperMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWallpaperTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:id="@+id/rlWallpaper"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/tvWallpaperTitle">

            <TextView
                android:id="@+id/tvWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper"
                android:textColor="@color/colorWhite"
                android:textSize="17dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvWallpaperDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWallpaper"
                android:text="@string/turn_on_the_button_to_set_the_photos_as_your_device_wallpaper"
                android:textColor="@color/colorOffWhite"
                android:textSize="14dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/sWallpaper"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlWallpaperQuality"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/rlWallpaper">

            <TextView
                android:id="@+id/tvWallpaperQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper_quality"
                android:textColor="@color/colorWhite"
                android:textSize="17dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvWallpaperQualityDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWallpaperQuality"
                android:text="@string/set_full_quality_image_as_your_device_wallpaper_recommended_over_high_speed_data_connection"
                android:textColor="@color/colorOffWhite"
                android:textSize="14dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/sWallpaperQuality"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sWallpaperQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlWallpaperMain">

        <TextView
            android:id="@+id/tvPaletteMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palette"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:id="@+id/rlPaletteCount"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/tvPaletteMain">

            <TextView
                android:id="@+id/tvPalette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:textColor="@color/colorWhite"
                android:textSize="17dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvPaletteDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPalette"
                android:text="@string/show_only_major_colors_from_image"
                android:textColor="@color/colorOffWhite"
                android:textSize="14dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sPalette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>