<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvPalette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:theme="@style/AppTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme"/>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/imageRipple"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleColor="@color/colorWhite"
                app:mrl_rippleAlpha="0.1"
                app:mrl_rippleHover="true">
                <!--<ImageView-->
                <!--android:id="@+id/ivPhoto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:scaleType="centerCrop"-->
                <!--app:layout_collapseMode="parallax"/>-->
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>
            </com.balysv.materialripple.MaterialRippleLayout>

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/press_this_for_going_back"
                android:nextFocusForward="@+id/ivShare"/>

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_white_24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/press_this_to_share_image"
                android:nextFocusForward="@+id/ivLikeBorder"/>

            <ImageView
                android:id="@+id/ivLikeBorder"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_favourite_border_white_24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom|end"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/this_is_like_border"
                android:nextFocusForward="@+id/ivLike"/>

            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_favourite_white_24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom|end"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/press_this_to_like_or_unlike_the_image"
                android:nextFocusForward="@+id/ivDownload"/>

            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="pin"
                android:src="@drawable/ic_file_download_white_24dp"
                android:onClick="onClick"
                android:contentDescription="@string/press_to_download_the_image"
                android:nextFocusForward="@+id/ivWallpaper"/>

            <ImageView
                android:id="@+id/ivWallpaper"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="pin"
                android:src="@drawable/ic_wallpaper_white_24dp"
                android:contentDescription="@string/press_this_to_set_image_as_the_wallpaper"/>

            <ProgressBar
                android:id="@+id/pbWallpaper"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="pin"/>

            <TextView
                android:id="@+id/tvDownloading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/downloading"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="pin"/>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>