<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbMain"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tbMain"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/mrl1"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/colorWhite"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleHover="true">
            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="55dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivTabUnsplash"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_palette_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:tint="@color/tabIcons"
                    android:contentDescription="@string/tap_this_for_seeing_set_of_images_provided"/>

            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/mrl2"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/mrl1"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/colorWhite"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleHover="true">

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="55dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivTabYourOwn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_whatshot_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:tint="@color/tabIcons"
                    android:contentDescription="@string/press_this_tab_for_choosing_image_on_your_own"/>
            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/mrl3"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/mrl2"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/colorWhite"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleHover="true">

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="55dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivTabFavourite"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_favourite_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:tintMode="@color/tabIcons"
                    android:contentDescription="@string/tab_this_tab_to_see_the_liked_images"/>

            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/flDetailUnsplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
